--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "fuzzerjs",
   "version": "0.0.1",
   "description": "A little tool in JavaScript to fuzzing websites",
-  "main": "main.js",
+  "main": "main.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon src/main.ts"
+    "dev": "nodemon",
+    "start": "npm run build && node ./dist/main.js"
   },
   "author": "Isaac Ramírez Garrido <isaacramirezgarrido1@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/yargs": "^17.0.33",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@types/yargs": "^17.0.33",
     "csv": "^6.3.10",
     "yargs": "^17.7.2"
   }
